Fix band stretch for medium widths.

--- a/explore_center.css
+++ b/explore_center.css
@@ -1,15 +1,17 @@
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,700);
 .front #pagetitle{display:none;}
 .front.logged-in #pagetitle{display:block;visibility:hidden;}
-@media only screen and (min-width: 480px){.bp1-decoration{display:block;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:left;}}@media only screen and (min-width: 768px){.bp2-decoration{display:block;} #maincontent #academic-advisers{text-align:left;} #maincontent .grid-layout .first{float:none;width:auto;} #maincontent .grid-layout .second{float:none;width:auto;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:none;}}@media only screen and (min-width: 960px){#maincontent .wdn-band{margin:0 -9px;padding:9px 0;} #maincontent .wdn-inner-wrapper{padding:0 9px;} .bp3-decoration{display:block;} #maincontent h3.ec-heading.small{font-size:1.1em;} .event-listing:nth-child(2){padding-right:3em;} .event-listing:nth-child(3){padding-left:3em;}}@media only screen and (min-width: 1040px){#maincontent .wdn-band{margin:0 -12px;padding:12px 0;} #maincontent .wdn-inner-wrapper{padding:0 12px;} .bp4-decoration{display:block;}}ie7 .bp1-decoration,.ie8 .bp1-decoration{display:block;}
+#maincontent .wdn-band{margin:0 -4px;padding:4px 0;}
+#maincontent .wdn-inner-wrapper{padding:0 4px;}
+@media only screen and (min-width: 480px){.bp1-decoration{display:block;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:left;}}@media only screen and (min-width: 768px){#maincontent .wdn-band{margin:0 -9px;padding:9px 0;} #maincontent .wdn-inner-wrapper{padding:0 9px;} .bp2-decoration{display:block;} #maincontent #academic-advisers{text-align:left;} #maincontent .grid-layout .first{float:none;width:auto;} #maincontent .grid-layout .second{float:none;width:auto;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:none;}}@media only screen and (min-width: 960px){.bp3-decoration{display:block;} #maincontent h3.ec-heading.small{font-size:1.1em;} .event-listing:nth-child(2){padding-right:3em;} .event-listing:nth-child(3){padding-left:3em;}}@media only screen and (min-width: 1040px){#maincontent .wdn-band{margin:0 -12px;padding:12px 0;} #maincontent .wdn-inner-wrapper{padding:0 12px;} .bp4-decoration{display:block;}}ie7 .bp1-decoration,.ie8 .bp1-decoration{display:block;}
 ie7 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1),.ie8 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:left;}
+ie7 #maincontent .wdn-band,.ie8 #maincontent .wdn-band{margin:0 -9px;padding:9px 0;}
+ie7 #maincontent .wdn-inner-wrapper,.ie8 #maincontent .wdn-inner-wrapper{padding:0 9px;}
 ie7 .bp2-decoration,.ie8 .bp2-decoration{display:block;}
 ie7 #maincontent #academic-advisers,.ie8 #maincontent #academic-advisers{text-align:left;}
 ie7 #maincontent .grid-layout .first,.ie8 #maincontent .grid-layout .first{float:none;width:auto;}
 ie7 #maincontent .grid-layout .second,.ie8 #maincontent .grid-layout .second{float:none;width:auto;}
 ie7 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1),.ie8 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:none;}
-ie7 #maincontent .wdn-band,.ie8 #maincontent .wdn-band{margin:0 -9px;padding:9px 0;}
-ie7 #maincontent .wdn-inner-wrapper,.ie8 #maincontent .wdn-inner-wrapper{padding:0 9px;}
 ie7 .bp3-decoration,.ie8 .bp3-decoration{display:block;}
 ie7 #maincontent h3.ec-heading.small,.ie8 #maincontent h3.ec-heading.small{font-size:1.1em;}
 ie7 .event-listing:nth-child(2),.ie8 .event-listing:nth-child(2){padding-right:3em;}
@@ -68,15 +70,15 @@ ie7 .bp4-decoration,.ie8 .bp4-decoration{display:block;}
 #maincontent .grid-layout *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 #maincontent .grid-layout .first{float:left;width:35%;}
 #maincontent .grid-layout .second{float:right;width:60%;}
-@media only screen and (min-width: 480px){.bp1-decoration{display:block;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:left;}}@media only screen and (min-width: 768px){.bp2-decoration{display:block;} #maincontent #academic-advisers{text-align:left;} #maincontent .grid-layout .first{float:none;width:auto;} #maincontent .grid-layout .second{float:none;width:auto;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:none;}}@media only screen and (min-width: 960px){#maincontent .wdn-band{margin:0 -9px;padding:9px 0;} #maincontent .wdn-inner-wrapper{padding:0 9px;} .bp3-decoration{display:block;} #maincontent h3.ec-heading.small{font-size:1.1em;} .event-listing:nth-child(2){padding-right:3em;} .event-listing:nth-child(3){padding-left:3em;}}@media only screen and (min-width: 1040px){#maincontent .wdn-band{margin:0 -12px;padding:12px 0;} #maincontent .wdn-inner-wrapper{padding:0 12px;} .bp4-decoration{display:block;}}ie7 .bp1-decoration,.ie8 .bp1-decoration{display:block;}
+@media only screen and (min-width: 480px){.bp1-decoration{display:block;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:left;}}@media only screen and (min-width: 768px){#maincontent .wdn-band{margin:0 -9px;padding:9px 0;} #maincontent .wdn-inner-wrapper{padding:0 9px;} .bp2-decoration{display:block;} #maincontent #academic-advisers{text-align:left;} #maincontent .grid-layout .first{float:none;width:auto;} #maincontent .grid-layout .second{float:none;width:auto;} .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:none;}}@media only screen and (min-width: 960px){.bp3-decoration{display:block;} #maincontent h3.ec-heading.small{font-size:1.1em;} .event-listing:nth-child(2){padding-right:3em;} .event-listing:nth-child(3){padding-left:3em;}}@media only screen and (min-width: 1040px){#maincontent .wdn-band{margin:0 -12px;padding:12px 0;} #maincontent .wdn-inner-wrapper{padding:0 12px;} .bp4-decoration{display:block;}}ie7 .bp1-decoration,.ie8 .bp1-decoration{display:block;}
 ie7 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1),.ie8 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:left;}
+ie7 #maincontent .wdn-band,.ie8 #maincontent .wdn-band{margin:0 -9px;padding:9px 0;}
+ie7 #maincontent .wdn-inner-wrapper,.ie8 #maincontent .wdn-inner-wrapper{padding:0 9px;}
 ie7 .bp2-decoration,.ie8 .bp2-decoration{display:block;}
 ie7 #maincontent #academic-advisers,.ie8 #maincontent #academic-advisers{text-align:left;}
 ie7 #maincontent .grid-layout .first,.ie8 #maincontent .grid-layout .first{float:none;width:auto;}
 ie7 #maincontent .grid-layout .second,.ie8 #maincontent .grid-layout .second{float:none;width:auto;}
 ie7 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1),.ie8 .bp1-wdn-grid-set-halves>.wdn-col:nth-of-type(2n + 1){clear:none;}
-ie7 #maincontent .wdn-band,.ie8 #maincontent .wdn-band{margin:0 -9px;padding:9px 0;}
-ie7 #maincontent .wdn-inner-wrapper,.ie8 #maincontent .wdn-inner-wrapper{padding:0 9px;}
 ie7 .bp3-decoration,.ie8 .bp3-decoration{display:block;}
 ie7 #maincontent h3.ec-heading.small,.ie8 #maincontent h3.ec-heading.small{font-size:1.1em;}
 ie7 .event-listing:nth-child(2),.ie8 .event-listing:nth-child(2){padding-right:3em;}
