--- a/layouts.less
+++ b/layouts.less
@@ -8,8 +8,18 @@
     display: block;
     visibility: hidden;
 }
+#maincontent {
+    .wdn-band {
+        margin: 0 -4px;
+        padding: 4px 0;
+    }
 
-.bp3() {
+    .wdn-inner-wrapper {
+        padding: 0 4px;
+    }
+}
+
+.bp2() {
     #maincontent {
         .wdn-band {
             margin: 0 -9px;
